20295
A tale of 2 repls:

{noformat}
Welcome to Scala 2.11.8 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_112).
Type in expressions for evaluation. Or try :help.

scala> io.Source.fromFile("/tmp/foo").mkString
res0: String =
"Foo!
"
{noformat}

And then in 2.12
{noformat}
Welcome to Scala 2.12.0 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_112).
Type in expressions for evaluation. Or try :help.

scala> io.Source.fromFile("/tmp/foo").mkString
<console>:12: error: object Source is not a member of package io
       io.Source.fromFile("/tmp/foo").mkString
          ^
{noformat}
